	which provides the User Agent String. Created test program for User Agent
	String. Updated all rivendell modules to use get user agent and
	get version functions by default unless otherwise specified. Test
	suite also adds '(Test Suite)' to user agent string.
2017-09-18 Todd Baker <bakert@rfa.org>
	* Modified : rd_addcart.c, rd_addcut.c, rd_addlog.c, rd_assignschedcode.c 
	rd_audioinfo.c, rd_audiostore.c, rd_copyaudio.c, rd_createticket.c, 
	rd_deleteaudio.c, rd_deletelog.c, rd_editcart.c, rd_editcart.h, 
	rd_editcut.c, rd_editcut.h, rd_export.c, rd_exportpeaks.c,
	rd_import.c, rd_listcart.c, rd_listcarts.c, rd_listcartschedcodes.c 
	rd_listcut.c, rd_listcuts.c, rd_listgroup.c, rd_listgroups.c,
	rd_listlog.c, rd_listlogs.c , rd_listschedcodes.c, rd_listservices.c,
	rd_listsystemsettings.c, rd_removecart.c, rd_removecut.c,
	rd_savelog.c, rd_trimaudio.c, rd_unassignschedcode.c. 
	Fixes include correct order for curl_easy_init() calls and added 
	curl_easy_escape calls for all string fields.
2017-09-18 Todd Baker <bakert@rfa.org>
	Modified: PACKAGE_VERSION ,rivendell/rd_common.h - updated to 0.0.5.
	also modified configure.ac to clean up not a literal warnings.
2017-09-18 Todd Baker <bakert@rfa.org>
	Fixed rivendell/*.c funtion calls that use user provided User_Agent field.
2017-12-04 Fred Gleason <fredg@paravelsystems.com>
	* Added support for the 'filter' and 'recent' fields to rd_listlogs(5).
2017-12-07 Todd Baker <bakert@rfa.org>
	* Changed PACKAGE_RELEASE to version 0.0.6.
	* Updated configure.ac Library Version to 1:0:1
	* Removed /tests/get_version and tests/get_useragent executables.
2018-07-02 Todd Baker  <bakert@rfa.org>
	* Changed PACKAGE_RELEASE to version 1.0.0.
2018-07-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs that broke the 'make rpm' target.
2018-08-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in RD_ImportCart() that caused string values to be
	double-escaped.