@@ -345,3 +345,5 @@
 2018-08-28 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed a bug in RD_ImportCart() that caused string values to be
 	double-escaped.
+2018-08-28 Fred Gleason <fredg@paravelsystems.com>
+	* Updated the rd_import(7) man page.
